--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "node index.js",
-  "dev": "nodemon -e '*'",
+  "start":"nodemon -e '*'",
   "test": "echo \"Error: no test specified\" && exit 1"
 },
   "author": "Eveana Haque",
